# PixelForge-CNC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_exe.py  launch.bat  pyproject.toml  requirements.txt  run.py  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  test.yml
pixelforge/: __init__.py
pixelforge/engine/: __init__.py  contour_tracer.py  depth_map.py  gcode_2d.py  gcode_generator.py  image_processor.py  material_presets.py  material_sim.py  settings.py  simulation.py  types.py
pixelforge/ui/: __init__.py  app.py  controllers.py  dialogs.py  theme.py  translations.py  widgets.py  workers.py
tests/: test_contour_tracer.py  test_gcode_2d.py  test_gcode_generator.py
